# wasitest

./: Cargo.toml
src/: main.rs
