[package]
name = "wasitest"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config= { git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", default-features = false }
aws-smithy-async= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next" }
aws-smithy-http= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", features = ["event-stream"] }
aws-credential-types= {  git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", features = ["hardcoded-credentials"] }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust.git", branch = "next", default-features = false }
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"

[dependencies.serde]
version = "1.0.171"
features = ["derive"]


[dependencies.tokio]
version = "1.29.1"
# features = ["full"]
features = ["macros", "rt"]
